Project Code/ICG with Quadruples/y.output
Nonterminals useless in grammar

   T_V
   RELOP
   bin_boolop
   un_arop
   un_boolop


Terminals unused in grammar

   T_lteq
   T_gteq
   T_neq
   T_noteq
   T_eqeq
   T_incr
   T_decr
   BREAK
   CONTINUE
   T_ques
   T_colon


Rules useless in grammar

   85 T_V: ID

   86 RELOP: T_lt
   87      | T_gt
   88      | T_lteq
   89      | T_gteq
   90      | T_neq
   91      | T_eqeq

   92 bin_boolop: T_and
   93           | T_or

   94 un_arop: T_incr
   95        | T_decr

   96 un_boolop: T_not


Grammar

    0 $accept: S $end

    1 S: START

    2 START: INCLUDE T_lt H T_gt MAIN
    3      | INCLUDE "\"" H "\"" MAIN

    4 MAIN: VOID MAINTOK BODY
    5     | INT MAINTOK BODY

    6 BODY: '{' C '}'

    7 C: C statement ';'
    8  | C LOOPS
    9  | statement ';'
   10  | LOOPS

   11 $@1: %empty

   12 $@2: %empty

   13 LOOPS: WHILE $@1 '(' COND ')' $@2 LOOPBODY

   14 $@3: %empty

   15 $@4: %empty

   16 $@5: %empty

   17 LOOPS: FOR '(' ASSIGN_EXPR $@3 ';' COND $@4 ';' statement $@5 ')' LOOPBODY

   18 $@6: %empty

   19 $@7: %empty

   20 LOOPS: IF '(' COND ')' $@6 LOOPBODY $@7 A

   21 A: ELSE LOOPBODY
   22  | %empty

   23 LOOPBODY: '{' LOOPC '}'
   24         | ';'
   25         | statement ';'

   26 LOOPC: LOOPC statement ';'
   27      | LOOPC LOOPS
   28      | statement ';'
   29      | LOOPS

   30 statement: ASSIGN_EXPR
   31          | EXP
   32          | PRINT

   33 COND: B

   34 $@8: %empty

   35 COND: B T_and $@8 COND

   36 $@9: %empty

   37 COND: B $@9 T_or COND
   38     | T_not B

   39 $@10: %empty

   40 $@11: %empty

   41 B: V T_eq $@10 T_eq $@11 LIT

   42 $@12: %empty

   43 B: V T_gt $@12 F

   44 $@13: %empty

   45 B: V T_lt $@13 F

   46 $@14: %empty

   47 $@15: %empty

   48 B: V T_not $@14 T_eq $@15 LIT
   49  | '(' B ')'
   50  | V

   51 $@16: %empty

   52 F: T_eq $@16 LIT
   53  | LIT

   54 V: ID

   55 $@17: %empty

   56 $@18: %empty

   57 ASSIGN_EXPR: LIT $@17 T_eq $@18 EXP

   58 $@19: %empty

   59 $@20: %empty

   60 ASSIGN_EXPR: TYPE LIT $@19 T_eq $@20 EXP

   61 EXP: ADDSUB

   62 $@21: %empty

   63 EXP: EXP T_lt $@21 EXP

   64 $@22: %empty

   65 EXP: EXP T_gt $@22 EXP

   66 ADDSUB: TERM

   67 $@23: %empty

   68 ADDSUB: EXP T_pl $@23 TERM

   69 $@24: %empty

   70 ADDSUB: EXP T_min $@24 TERM

   71 TERM: FACTOR

   72 $@25: %empty

   73 TERM: TERM T_mul $@25 FACTOR

   74 $@26: %empty

   75 TERM: TERM T_div $@26 FACTOR

   76 FACTOR: LIT
   77       | '(' EXP ')'

   78 PRINT: COUT T_lt T_lt STRING
   79      | COUT T_lt T_lt STRING T_lt T_lt ENDL

   80 LIT: ID
   81    | NUM

   82 TYPE: INT
   83     | CHAR
   84     | FLOAT


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13 17 20 49 77
')' (41) 13 17 20 49 77
';' (59) 7 9 17 24 25 26 28
'{' (123) 6 23
'}' (125) 6 23
error (256)
ID (258) 54 80
NUM (259) 81
T_lt (260) 2 45 63 78 79
T_gt (261) 2 43 65
T_lteq (262)
T_gteq (263)
T_neq (264)
T_noteq (265)
T_eqeq (266)
T_and (267) 35
T_or (268) 37
T_incr (269)
T_decr (270)
T_not (271) 38 48
T_eq (272) 41 48 52 57 60
WHILE (273) 13
INT (274) 5 82
CHAR (275) 83
FLOAT (276) 84
VOID (277) 4
H (278) 2 3
MAINTOK (279) 4 5
INCLUDE (280) 2 3
BREAK (281)
CONTINUE (282)
IF (283) 20
ELSE (284) 21
COUT (285) 78 79
STRING (286) 78 79
FOR (287) 17
ENDL (288) 79
T_ques (289)
T_colon (290)
T_pl (291) 68
T_min (292) 70
T_mul (293) 73
T_div (294) 75
"\"" (295) 3


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
S (47)
    on left: 1, on right: 0
START (48)
    on left: 2 3, on right: 1
MAIN (49)
    on left: 4 5, on right: 2 3
BODY (50)
    on left: 6, on right: 4 5
C (51)
    on left: 7 8 9 10, on right: 6 7 8
LOOPS (52)
    on left: 13 17 20, on right: 8 10 27 29
$@1 (53)
    on left: 11, on right: 13
$@2 (54)
    on left: 12, on right: 13
$@3 (55)
    on left: 14, on right: 17
$@4 (56)
    on left: 15, on right: 17
$@5 (57)
    on left: 16, on right: 17
$@6 (58)
    on left: 18, on right: 20
$@7 (59)
    on left: 19, on right: 20
A (60)
    on left: 21 22, on right: 20
LOOPBODY (61)
    on left: 23 24 25, on right: 13 17 20 21
LOOPC (62)
    on left: 26 27 28 29, on right: 23 26 27
statement (63)
    on left: 30 31 32, on right: 7 9 17 25 26 28
COND (64)
    on left: 33 35 37 38, on right: 13 17 20 35 37
$@8 (65)
    on left: 34, on right: 35
$@9 (66)
    on left: 36, on right: 37
B (67)
    on left: 41 43 45 48 49 50, on right: 33 35 37 38 49
$@10 (68)
    on left: 39, on right: 41
$@11 (69)
    on left: 40, on right: 41
$@12 (70)
    on left: 42, on right: 43
$@13 (71)
    on left: 44, on right: 45
$@14 (72)
    on left: 46, on right: 48
$@15 (73)
    on left: 47, on right: 48
F (74)
    on left: 52 53, on right: 43 45
$@16 (75)
    on left: 51, on right: 52
V (76)
    on left: 54, on right: 41 43 45 48 50
ASSIGN_EXPR (77)
    on left: 57 60, on right: 17 30
$@17 (78)
    on left: 55, on right: 57
$@18 (79)
    on left: 56, on right: 57
$@19 (80)
    on left: 58, on right: 60
$@20 (81)
    on left: 59, on right: 60
EXP (82)
    on left: 61 63 65, on right: 31 57 60 63 65 68 70 77
$@21 (83)
    on left: 62, on right: 63
$@22 (84)
    on left: 64, on right: 65
ADDSUB (85)
    on left: 66 68 70, on right: 61
$@23 (86)
    on left: 67, on right: 68
$@24 (87)
    on left: 69, on right: 70
TERM (88)
    on left: 71 73 75, on right: 66 68 70 73 75
$@25 (89)
    on left: 72, on right: 73
$@26 (90)
    on left: 74, on right: 75
FACTOR (91)
    on left: 76 77, on right: 71 73 75
PRINT (92)
    on left: 78 79, on right: 32
LIT (93)
    on left: 80 81, on right: 41 48 52 53 57 60 76
TYPE (94)
    on left: 82 83 84, on right: 60


State 0

    0 $accept: . S $end

    INCLUDE  shift, and go to state 1

    S      go to state 2
    START  go to state 3


State 1

    2 START: INCLUDE . T_lt H T_gt MAIN
    3      | INCLUDE . "\"" H "\"" MAIN

    T_lt  shift, and go to state 4
    "\""  shift, and go to state 5


State 2

    0 $accept: S . $end

    $end  shift, and go to state 6


State 3

    1 S: START .

    $default  reduce using rule 1 (S)


State 4

    2 START: INCLUDE T_lt . H T_gt MAIN

    H  shift, and go to state 7


State 5

    3 START: INCLUDE "\"" . H "\"" MAIN

    H  shift, and go to state 8


State 6

    0 $accept: S $end .

    $default  accept


State 7

    2 START: INCLUDE T_lt H . T_gt MAIN

    T_gt  shift, and go to state 9


State 8

    3 START: INCLUDE "\"" H . "\"" MAIN

    "\""  shift, and go to state 10


State 9

    2 START: INCLUDE T_lt H T_gt . MAIN

    INT   shift, and go to state 11
    VOID  shift, and go to state 12

    MAIN  go to state 13


State 10

    3 START: INCLUDE "\"" H "\"" . MAIN

    INT   shift, and go to state 11
    VOID  shift, and go to state 12

    MAIN  go to state 14


State 11

    5 MAIN: INT . MAINTOK BODY

    MAINTOK  shift, and go to state 15


State 12

    4 MAIN: VOID . MAINTOK BODY

    MAINTOK  shift, and go to state 16


State 13

    2 START: INCLUDE T_lt H T_gt MAIN .

    $default  reduce using rule 2 (START)


State 14

    3 START: INCLUDE "\"" H "\"" MAIN .

    $default  reduce using rule 3 (START)


State 15

    5 MAIN: INT MAINTOK . BODY

    '{'  shift, and go to state 17

    BODY  go to state 18


State 16

    4 MAIN: VOID MAINTOK . BODY

    '{'  shift, and go to state 17

    BODY  go to state 19


State 17

    6 BODY: '{' . C '}'

    ID     shift, and go to state 20
    NUM    shift, and go to state 21
    WHILE  shift, and go to state 22
    INT    shift, and go to state 23
    CHAR   shift, and go to state 24
    FLOAT  shift, and go to state 25
    IF     shift, and go to state 26
    COUT   shift, and go to state 27
    FOR    shift, and go to state 28
    '('    shift, and go to state 29

    C            go to state 30
    LOOPS        go to state 31
    statement    go to state 32
    ASSIGN_EXPR  go to state 33
    EXP          go to state 34
    ADDSUB       go to state 35
    TERM         go to state 36
    FACTOR       go to state 37
    PRINT        go to state 38
    LIT          go to state 39
    TYPE         go to state 40


State 18

    5 MAIN: INT MAINTOK BODY .

    $default  reduce using rule 5 (MAIN)


State 19

    4 MAIN: VOID MAINTOK BODY .

    $default  reduce using rule 4 (MAIN)


State 20

   80 LIT: ID .

    $default  reduce using rule 80 (LIT)


State 21

   81 LIT: NUM .

    $default  reduce using rule 81 (LIT)


State 22

   13 LOOPS: WHILE . $@1 '(' COND ')' $@2 LOOPBODY

    $default  reduce using rule 11 ($@1)

    $@1  go to state 41


State 23

   82 TYPE: INT .

    $default  reduce using rule 82 (TYPE)


State 24

   83 TYPE: CHAR .

    $default  reduce using rule 83 (TYPE)


State 25

   84 TYPE: FLOAT .

    $default  reduce using rule 84 (TYPE)


State 26

   20 LOOPS: IF . '(' COND ')' $@6 LOOPBODY $@7 A

    '('  shift, and go to state 42


State 27

   78 PRINT: COUT . T_lt T_lt STRING
   79      | COUT . T_lt T_lt STRING T_lt T_lt ENDL

    T_lt  shift, and go to state 43


State 28

   17 LOOPS: FOR . '(' ASSIGN_EXPR $@3 ';' COND $@4 ';' statement $@5 ')' LOOPBODY

    '('  shift, and go to state 44


State 29

   77 FACTOR: '(' . EXP ')'

    ID   shift, and go to state 20
    NUM  shift, and go to state 21
    '('  shift, and go to state 29

    EXP     go to state 45
    ADDSUB  go to state 35
    TERM    go to state 36
    FACTOR  go to state 37
    LIT     go to state 46


State 30

    6 BODY: '{' C . '}'
    7 C: C . statement ';'
    8  | C . LOOPS

    ID     shift, and go to state 20
    NUM    shift, and go to state 21
    WHILE  shift, and go to state 22
    INT    shift, and go to state 23
    CHAR   shift, and go to state 24
    FLOAT  shift, and go to state 25
    IF     shift, and go to state 26
    COUT   shift, and go to state 27
    FOR    shift, and go to state 28
    '}'    shift, and go to state 47
    '('    shift, and go to state 29

    LOOPS        go to state 48
    statement    go to state 49
    ASSIGN_EXPR  go to state 33
    EXP          go to state 34
    ADDSUB       go to state 35
    TERM         go to state 36
    FACTOR       go to state 37
    PRINT        go to state 38
    LIT          go to state 39
    TYPE         go to state 40


State 31

   10 C: LOOPS .

    $default  reduce using rule 10 (C)


State 32

    9 C: statement . ';'

    ';'  shift, and go to state 50


State 33

   30 statement: ASSIGN_EXPR .

    $default  reduce using rule 30 (statement)


State 34

   31 statement: EXP .
   63 EXP: EXP . T_lt $@21 EXP
   65    | EXP . T_gt $@22 EXP
   68 ADDSUB: EXP . T_pl $@23 TERM
   70       | EXP . T_min $@24 TERM

    T_lt   shift, and go to state 51
    T_gt   shift, and go to state 52
    T_pl   shift, and go to state 53
    T_min  shift, and go to state 54

    $default  reduce using rule 31 (statement)


State 35

   61 EXP: ADDSUB .

    $default  reduce using rule 61 (EXP)


State 36

   66 ADDSUB: TERM .
   73 TERM: TERM . T_mul $@25 FACTOR
   75     | TERM . T_div $@26 FACTOR

    T_mul  shift, and go to state 55
    T_div  shift, and go to state 56

    $default  reduce using rule 66 (ADDSUB)


State 37

   71 TERM: FACTOR .

    $default  reduce using rule 71 (TERM)


State 38

   32 statement: PRINT .

    $default  reduce using rule 32 (statement)


State 39

   57 ASSIGN_EXPR: LIT . $@17 T_eq $@18 EXP
   76 FACTOR: LIT .

    T_eq      reduce using rule 55 ($@17)
    $default  reduce using rule 76 (FACTOR)

    $@17  go to state 57


State 40

   60 ASSIGN_EXPR: TYPE . LIT $@19 T_eq $@20 EXP

    ID   shift, and go to state 20
    NUM  shift, and go to state 21

    LIT  go to state 58


State 41
